<resources>
    <string name="app_name">SigningLab</string>
    <string name="title_activity_fingerprint_auth">FingerprintAuthActivity</string>
    <string name="fingerprint_auth">Fingerprint Auth</string>
    <string name="no_fingerprint_support">No fingerprint support</string>
    <string name="no_fingerprint_hardware">No fingerprint hardware detected</string>
    <string name="no_fingerprint_enrolled">No fingerprints enrolled</string>
    <string name="title_activity_sign_verify">SignVerifyActivity</string>
    <string name="list_keys">List keys</string>
    <string name="confirm_credential">Confirm Credential</string>
    <string name="are_you_yourself">Are you Yourself? :)</string>
    <string name="pls_show_me_you_">Please show you are not someoneelse! :p</string>
    <string name="credential_confirmed">Credential confirmed</string>
    <string name="credential_confirm_failed">Credential confirm failed</string>
    <string name="sign_verify">Sign / Verify</string>
    <string name="clean_data">Clean Data:</string>
    <string name="data_bytes">Data Bytes:</string>
    <string name="signed_data_bytes">Signature Bytes:</string>
    <string name="verify">Verify</string>
    <string name="private_key">Private Key</string>
    <string name="public_key">Public  Key</string>
</resources>
