<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/fab_margin"
    tools:context="br.com.cucha.signinglab.MainActivity">

    <Button
        android:id="@+id/button_listkeys_main"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/list_keys"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteY="8dp"
        tools:layout_editor_absoluteX="0dp" />

    <Button
        android:id="@+id/button_confirmcredential_main"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/confirm_credential"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_listkeys_main"
        tools:layout_editor_absoluteY="8dp"
        tools:layout_editor_absoluteX="0dp" />

    <Button
        android:id="@+id/button_fingerprint_main"
        android:text="@string/fingerprint_auth"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_confirmcredential_main" />

    <Button
        android:id="@+id/button_sign_main"
        android:text="@string/sign_verify"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_fingerprint_main" />

</android.support.constraint.ConstraintLayout>
